// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IDP Authenticator transformer Tests IDP Authenticator Enroll tests should add correct title, description, and button 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.idp.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.idp.enroll.description",
        },
        "type": "Description",
      },
      Object {
        "label": "mfa.enroll",
        "options": Object {
          "isActionStep": false,
          "onClick": [Function],
          "step": "enroll-authenticator",
          "type": "button",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Authenticator transformer Tests IDP Authenticator Enroll tests should add title, description, spinner and auto-redirect when skipIdpFactorVerificationBtn feature is true 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.idp.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.idp.enroll.description",
        },
        "type": "Description",
      },
      Object {
        "type": "Spinner",
      },
      Object {
        "options": Object {
          "url": "http://localhost:3000/sso/idps/mockedIdp123?stateToken=mockedStateToken124",
        },
        "type": "Redirect",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Authenticator transformer Tests IDP Authenticator Enroll tests should not auto-redirect when skipIdpFactorVerificationBtn feature is true but there is an error in transaction 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.idp.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.idp.enroll.description",
        },
        "type": "Description",
      },
      Object {
        "label": "mfa.enroll",
        "options": Object {
          "isActionStep": false,
          "onClick": [Function],
          "step": "enroll-authenticator",
          "type": "button",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Authenticator transformer Tests IDP Authenticator verify tests should add correct title, description, and button 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.idp.challenge.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.idp.challenge.description",
        },
        "type": "Description",
      },
      Object {
        "label": "mfa.challenge.verify",
        "options": Object {
          "isActionStep": false,
          "onClick": [Function],
          "step": "challenge-authenticator",
          "type": "button",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Authenticator transformer Tests IDP Authenticator verify tests should add title, description, spinner and auto-redirect when skipIdpFactorVerificationBtn feature is true 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.idp.challenge.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.idp.challenge.description",
        },
        "type": "Description",
      },
      Object {
        "type": "Spinner",
      },
      Object {
        "options": Object {
          "url": "http://localhost:3000/sso/idps/mockedIdp123?stateToken=mockedStateToken124",
        },
        "type": "Redirect",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Authenticator transformer Tests IDP Authenticator verify tests should not auto-redirect when skipIdpFactorVerificationBtn feature is true but there is an error in transaction 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.idp.challenge.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.idp.challenge.description",
        },
        "type": "Description",
      },
      Object {
        "label": "mfa.challenge.verify",
        "options": Object {
          "isActionStep": false,
          "onClick": [Function],
          "step": "challenge-authenticator",
          "type": "button",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
